added icons to the interface