@@ -42,7 +42,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
     compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'
-
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 repositories {
@@ -56,7 +56,8 @@ run {
             def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',]
             jvmArgs = jvmArgs + newArgs
         }
-        jvmArgs = jvmArgs + ['--module-path', classpath.asPath,
+        jvmArgs = jvmArgs + ['--add-opens', 'javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons',
+                             '--module-path', classpath.asPath,
                              '--patch-module', "$moduleName=" + files(sourceSets.main.output.resourcesDir).asPath,
                              '--module', "$mainClassName",
         ]
